--- a/package.json
+++ b/package.json
@@ -83,6 +83,11 @@
     "yamprint": "^0.8.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "dayjs": "^1.11.13",
+    "doddle": "^5.0.0-beta.16",
+    "lodash": "^4.17.21",
+    "pretty-ms": "^9.2.0",
+    "roarr": "^7.21.1",
+    "simple-git": "^3.27.0"
   }
 }
