--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -27,6 +27,8 @@ jobs:
         run: yarn install --immutable
       - name: build
         run: yarn build
+      - name: bundle
+        run: yarn bundle
       - name: lint:check
         run: yarn lint:check
       - name: test
