--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,13 @@
       "name": "Launch Main (dist)",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "program": "${workspaceFolder}/dist/cjs/main.js"
+      "program": "${workspaceFolder}/dist/esm/main.js",
+      "cwd": "${workspaceFolder}/../a",
+      "args": ["watch"],
+      "env": {
+        "NODE_ENV": "development",
+        "NODE_OPTIONS": "--enable-source-maps --stack-trace-limit=1000"
+      }
     }
   ]
 }
