--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "package.json"
   ],
   "scripts": {
+    "start": "node dist/esm/main.js",
     "build": "tsc -b .",
     "bundle": "node tools/build.cjs",
+    "bundle:watch": "node tools/watch.cjs",
     "clean": "shx rm -rf dist .buildinfo || true",
     "build:clean": "run-s clean build",
     "prepare": "husky install",
@@ -55,11 +57,14 @@
   },
   "dependencies": {
     "@types/lodash": "^4.17.16",
+    "@types/lodash-es": "^4.17.12",
     "cosmiconfig": "^9.0.0",
     "dayjs": "^1.11.13",
     "doddle": "^5.0.0-beta.16",
+    "isomorphic-git": "^1.30.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "parse-duration": "^2.1.4",
     "pretty-ms": "^9.2.0",
     "roarr": "^7.21.1",
@@ -67,7 +72,8 @@
     "simple-git": "^3.27.0",
     "what-are-you": "^0.1.8",
     "yargs": "^17.7.2",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@gregros/eslint-config": "^0.7.1",
