--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,14 @@
-
-
 {
-    "root": true,
-    // Let's not use @typescript-eslint because it's a bit too strict.
-    // eslint:recommended is good though.
-    "extends": ["@gregros/eslint-config"],
-    "parserOptions": {
-      "project": ["./src/tsconfig.cjs.json"],
-      "ecmaVersion": 2022,
-      "sourceType": "module"
-    }
+  "root": true,
+  // Let's not use @typescript-eslint because it's a bit too strict.
+  // eslint:recommended is good though.
+  "extends": ["@gregros/eslint-config"],
+  "parserOptions": {
+    "project": ["./src/tsconfig.esm.json"],
+    "ecmaVersion": 2022,
+    "sourceType": "module"
+  },
+  "rules": {
+    "@typescript-eslint/no-unused-expressions": "off"
   }
-  
+}
