--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "eslint:check": "eslint 'src/**/*.{ts,mts,cts,js,mjs,cjs}'",
     "lint:fix": "prettier --write 'src/**/*.{js,jsx,cjs,mjs,ts,tsx,cts,mts,ctsx,mtsx,html,htm,yaml,yml,json,scss,css}' && eslint --fix 'src/**/*.{ts,mts,cts,js,mjs,cjs}' ",
     "lint:check": "prettier --check 'src/**/*.{js,jsx,cjs,mjs,ts,tsx,cts,mts,ctsx,mtsx,html,htm,yaml,yml,json,scss,css}' && eslint 'src/**/*.{ts,mts,cts,js,mjs,cjs}'",
-    "prepublishOnly": "node tools/packaging.cjs",
-    "tidy": "yarn install && run-s lint:fix build:clean test prepublishOnly"
+    "tidy": "yarn install && run-s lint:fix build:clean bundle"
   },
   "lint-staged": {
     "*.{ts,mts,cts,js,mjs,cjs}": "node_modules/.bin/eslint --cache --fix",
