--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gregros/autogit",
-  "version": "0.1.1",
+  "version": "0.2.1",
   "description": "Commits automatically to save progress.",
   "homepage": "https://github.com/GregRos/autogit#readme",
   "repository": "github:GregRos/autogit",
@@ -52,33 +52,30 @@
     "'src/**/*.{js,jsx,cjs,mjs,ts,tsx,cts,mts,ctsx,mtsx,html,htm,yaml,yml,json,scss,css}'": "node_modules/.bin/prettier --write"
   },
   "dependencies": {
-    "@types/lodash": "^4.17.16",
-    "@types/lodash-es": "^4.17.12",
+    "@types/yargs": "^17.0.33",
     "cosmiconfig": "^9.0.0",
     "dayjs": "^1.11.13",
-    "doddle": "^5.0.0-beta.16",
-    "isomorphic-git": "^1.30.1",
+    "doddle": "^5.0.13",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "parse-duration": "^2.1.4",
     "pretty-ms": "^9.2.0",
     "roarr": "^7.21.1",
     "rxjs": "^7.8.2",
     "simple-git": "^3.27.0",
-    "what-are-you": "^0.1.11",
-    "yargs": "^17.7.2",
-    "zod": "^3.24.3",
-    "zod-validation-error": "^3.4.0"
+    "what-are-you": "^0.1.12",
+    "yargs": "^18.0.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@gregros/eslint-config": "^0.7.1",
     "@types/js-yaml": "^4",
+    "@types/lodash": "^4.17.16",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.15.2",
     "@types/shelljs": "^0",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
-    "declare-it": "^3.0.8",
     "esbuild": "^0.25.3",
     "eslint": "^8",
     "husky": "^9.1.7",
@@ -90,7 +87,6 @@
     "prettier-plugin-packagejson": "^2.5.10",
     "shelljs": "^0.9.2",
     "shx": "^0.4.0",
-    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
